--- a/Web/edu-support-app/package.json
+++ b/Web/edu-support-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "big-integer": "^1.6.52",
     "cryptocompare": "^1.0.0",
